--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@
 ##
 
 # Set the name of the project and target:
-SET(TARGET "Advection")
-#SET(TARGET "step-64")
+#SET(TARGET "Advection")
+SET(TARGET "step-64")
 
 # Declare all source files the target consists of. Here, this is only
 # the one step-X.cc file, but as you expand your project you may wish
@@ -16,12 +16,12 @@ SET(TARGET "Advection")
 # or switch altogether to the large project CMakeLists.txt file discussed
 # in the "CMake in user projects" page accessible from the "User info"
 # page of the documentation.
-SET(TARGET_SRC
-  ${TARGET}.cc
-  )
 #SET(TARGET_SRC
-#  ${TARGET}.cu
+#  ${TARGET}.cc
 #  )
+SET(TARGET_SRC
+  ${TARGET}.cu
+  )
 
 # Usually, you will not need to modify anything beyond this point...
 
